--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <div class="box cyan">
                 <img src="photos/icon-suvs.svg" alt="">
                 <h1>Suvs</h1>
-                <p>Take an suvs for its spacious interior,power,and versatility. Prefect for your next family vacation
+                <p>Take an suvs for its spacious interior,power,and <br> versatility. Prefect for your next family
+                    vacation
                     and
                     off-road adventures.
                 </p>
